@@ -66,7 +66,6 @@ host_modules= { module= zlib; no_install=true; no_check=true; };
 host_modules= { module= gdb; with_x=true; };
 host_modules= { module= expect; with_x=true; };
 host_modules= { module= guile; with_x=true; };
-host_modules= { module= tclX; with_x=true; };
 host_modules= { module= tk; with_x=true; };
 host_modules= { module= tix; with_x=true; };
 host_modules= { module= libtermcap; no_check=true; no_clean=true; };
